# dns-gateway

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  base64.hpp  build_arm64.sh  build_openssl_arm64.sh  config.cpp  config.hpp  dns-gateway.json  dns_buffer.hpp  dns_cache.cpp  dns_error.cpp  dns_gateway.cpp  dns_log.hpp  dns_upstream.cpp  dns_upstream.hpp  main.cpp  socks_buffer.hpp  socks_client.hpp  socks_common.cpp  socks_common.hpp  socks_error.cpp  socks_error.hpp  version.hpp  version.hpp.in
.github/workflows/: README.md  release.yml
common/: log.cpp  log.hpp
dns/: dns_buffer.cpp  dns_buffer.hpp  dns_cache.cpp  dns_cache.hpp  dns_config.cpp  dns_config.hpp  dns_error.cpp  dns_error.hpp  dns_gateway.cpp  dns_gateway.hpp  dns_log.cpp  dns_monitor.cpp  dns_monitor.hpp  dns_object.cpp  dns_object.hpp  dns_package.cpp  dns_package.hpp  dns_router.cpp  dns_router.hpp  dns_static.cpp  dns_static.hpp  dns_upstream.cpp  dns_upstream.hpp  dns_upstream_pool.cpp  dns_upstream_pool.hpp  dns_utils.cpp  dns_utils.hpp  operation.cpp  operation.hpp  property.hpp
dns/socks/: socks_buffer.cpp  socks_client.cpp
scripts/: build-openssl.sh
socks/: socks_buffer.cpp  socks_buffer.hpp  socks_client.cpp  socks_client.hpp  socks_common.cpp  socks_common.hpp  socks_error.cpp  socks_error.hpp
